[gd_scene load_steps=13 format=3 uid="uid://yy8gyfvao266"]

[ext_resource type="Script" uid="uid://yuernaduobey" path="res://scripts/catcher_enemy.gd" id="1_sfp3n"]
[ext_resource type="Texture2D" uid="uid://rr46yh74s7rl" path="res://assets/enemies/catcher/idle.png" id="2_cnnur"]
[ext_resource type="AudioStream" uid="uid://c6dxugdgyhye2" path="res://audio/sounds/catcher_eating.wav" id="3_cnnur"]

[sub_resource type="Animation" id="Animation_cnnur"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_cnnur")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sfp3n"]
resource_name = "hit"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_cnnur")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_00qrf"]
_data = {
&"RESET": SubResource("Animation_cnnur"),
&"hit": SubResource("Animation_sfp3n")
}

[sub_resource type="Animation" id="Animation_ebecq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitArea/HitCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_cnnur")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 47)]
}

[sub_resource type="Animation" id="Animation_4ndv2"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -47), Vector2(0, 47)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitArea/HitCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(0, 50)]
}

[sub_resource type="Animation" id="Animation_hvrk4"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 47), Vector2(0, -47)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitArea/HitCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 50), Vector2(0, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dj0pf"]
_data = {
&"RESET": SubResource("Animation_ebecq"),
&"down": SubResource("Animation_4ndv2"),
&"up": SubResource("Animation_hvrk4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmjgq"]
size = Vector2(48, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0sf27"]
size = Vector2(48, 100)

[node name="CatcherEnemy" type="StaticBody2D"]
collision_layer = 8
collision_mask = 152
script = ExtResource("1_sfp3n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 47)
texture = ExtResource("2_cnnur")
hframes = 2

[node name="AnimationHit" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_00qrf")
}

[node name="AnimationState" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dj0pf")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_lmjgq")
debug_color = Color(0.8133807, 0.40840343, 0, 0.41960785)

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 50)
shape = SubResource("RectangleShape2D_0sf27")
debug_color = Color(0.9932824, 0, 0.24663815, 0.41960785)

[node name="EatingPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cnnur")
volume_db = -15.0
pitch_scale = 2.0
max_distance = 800.0
bus = &"Sounds"

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
